force-app/main/default/objects/Flight__c/fields/Airline_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Airline_Outbound__c</fullName>
    <label>Airline (Outbound)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airlines</valueSetName>
    </valueSet>
</CustomField>