force-app/main/default/objects/Flight__c/fields/Booking_Reference_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_Outbound__c</fullName>
    <label>Booking Reference (Outbound)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>