force-app/main/default/objects/Flight__c/fields/Departing_From_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Departing_From_Inbound__c</fullName>
    <label>Departing From (Inbound)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airports</valueSetName>
    </valueSet>
</CustomField>