force-app/main/default/objects/Flight__c/fields/Departing_From_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Departing_From_Outbound__c</fullName>
    <description>The Airport the artist will depart from</description>
    <label>Departing From (Outbound)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airports</valueSetName>
    </valueSet>
</CustomField>