force-app/main/default/objects/Flight__c/fields/Departing_Time_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Departing_Time_Inbound__c</fullName>
    <label>Departing Time (Inbound)</label>
    <type>DateTime</type>
</CustomField>