force-app/main/default/objects/Flight__c/fields/Departing_Time_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Departing_Time_Outbound__c</fullName>
    <label>Departing Time (Outbound)</label>
    <type>DateTime</type>
</CustomField>