force-app/main/default/objects/Flight__c/fields/Description_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Contract__c</fullName>
    <inlineHelpText>This info will appear on the contract, eg &quot;2 x retoervlugte van OR Tambo na Kimberley&quot;</inlineHelpText>
    <label>Description for Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>