force-app/main/default/objects/Flight__c/fields/Flight_Number_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Inbound__c</fullName>
    <label>Flight Number (Inbound)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>