force-app/main/default/objects/Flight__c/fields/Flight_Number_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Outbound__c</fullName>
    <label>Flight Number (Outbound)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>