force-app/main/default/objects/Flight__c/fields/Ground_Travel__c.field-meta.xml
<CustomField>
    <fullName>Ground_Travel__c</fullName>
    <inlineHelpText>Notes about ground travel before and after the flight</inlineHelpText>
    <label>Ground Travel</label>
    <type>TextArea</type>
</CustomField>