force-app/main/default/objects/Flight__c/fields/Landing_at_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Landing_at_Outbound__c</fullName>
    <label>Landing at (Outbound)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airports</valueSetName>
    </valueSet>
</CustomField>