force-app/main/default/objects/Flight__c/fields/Landing_Time_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Landing_Time_Inbound__c</fullName>
    <label>Landing Time (Inbound)</label>
    <type>DateTime</type>
</CustomField>