force-app/main/default/objects/Flight__c/fields/Landing_Time_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Landing_Time_Outbound__c</fullName>
    <label>Landing Time (Outbound)</label>
    <type>DateTime</type>
</CustomField>