force-app/main/default/objects/Flight__c/fields/Main_Flight__c.field-meta.xml
<CustomField>
    <fullName>Main_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a booking form has more than one flight, additional flights can be created under the main flight to store this info</inlineHelpText>
    <label>Main Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>AdditionalFlights</relationshipName>
    <type>Lookup</type>
</CustomField>