force-app/main/default/objects/Flight__c/fields/Price_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Price_Inbound__c</fullName>
    <label>Price (Inbound)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>