force-app/main/default/objects/Flight__c/fields/Price_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Price_Outbound__c</fullName>
    <label>Price (Outbound)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>