force-app/main/default/objects/Flight__c/fields/SameAirports__c.field-meta.xml
<CustomField>
    <fullName>SameAirports__c</fullName>
    <description>This formula is true if the Outbound Landing airport is the same as the inbound departure airport</description>
    <formula>TEXT(Landing_at_Outbound__c) = TEXT(Departing_From_Inbound__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SameAirports</label>
    <type>Checkbox</type>
</CustomField>